# rose-by-any-name

./: .dockerignore  .gitignore  Dockerfile  README.md  books.db  docker-compose.yml  ingest.py  migrate.py  package-lock.json  package.json  pyproject.toml  rose.py
data/: books.json
rose/: auth.py  database.py  main.py  models.py  rio.toml  schemas.py
rose/rose/: __init__.py  data_models.py  persistence.py
rose/rose/pages/: crud_page.py
rose/routers/: auth.py  books.py  feedbacks.py  users.py  views.py
src/db/: db.py
src/repository/: book_repository.py
src/schemas/: book.py
src/services/: book_service.py
src/ui/: book_card.py  book_form.py  book_grid.py
static/css/: rose.css
static/styles/: rose.css
templates/: 404.html  base.html  book_detail.html  books.html  feedbacks.html  index.html  login.html  user_detail.html  users.html
templates/partials/: book_list.html  feedback_item.html  user_list.html
ui/: add.html  detail.html  index.html
ui/css/: add.css  detail.css  index.css  rose.css
ui/js/: add.js  detail.js  index.js  rose.js
