[project]
name = "rose-by-any-name"
version = "0.2.0"
description = "Personal reading journal with FastAPI, SQLAlchemy, Jinja2 and htmx"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "pydantic[email]>=2.7.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
]

